<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="andplus.todoapp.ui.detail.TaskDetailViewModel"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_id"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/taskId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="123334444"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_lbl"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/taskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Appointment"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assigned_to"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/taskAssigned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Pedro"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_email"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/taskEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="task@Email.com"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_lbl"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/taskCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="True"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btnCompleteTask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="@{()->viewModel.updateTaskToComplete()}"
            android:layout_margin="16dp"
            android:text="@string/complete_task"
            />

        <Button
            android:id="@+id/btnEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:text="@string/send_email"
            />

    </LinearLayout>

</layout>